Implemented FinancialNetworkDataWithNodesIconsInColorAndCount class

--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -54,6 +54,7 @@
     <Compile Include="FinancialTransactionsNetworkData\EdgeMetrics.cs" />
     <Compile Include="FinancialTransactionsNetworkData\FinancialNetworkDataWithCount.cs" />
     <Compile Include="FinancialTransactionsNetworkData\FinancialNetworkDataWithNodesIconsAndCount.cs" />
+    <Compile Include="FinancialTransactionsNetworkData\FinancialNetworkDataWithNodesIconsInColorAndCount.cs" />
     <Compile Include="Helpers\ColorMapper.cs" />
     <Compile Include="Helpers\IconMapper.cs" />
     <Compile Include="Interfaces\INetworkData.cs" />
