--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -55,6 +55,7 @@
     <Compile Include="FinancialTransactionsNetworkData\FinancialNetworkDataWithCount.cs" />
     <Compile Include="FinancialTransactionsNetworkData\FinancialNetworkDataWithNodesIconsAndCount.cs" />
     <Compile Include="FinancialTransactionsNetworkData\FinancialNetworkDataWithNodesIconsInColorAndCount.cs" />
+    <Compile Include="FinancialTransactionsNetworkData\FinancialNetworkEdgesList.cs" />
     <Compile Include="Helpers\ColorMapper.cs" />
     <Compile Include="Helpers\IconMapper.cs" />
     <Compile Include="Interfaces\INetworkData.cs" />
