Refactoring naming of FinancialNetworkData

--- a/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
+++ b/VisjsNetworkLibrary/VisjsNetworkLibrary.csproj
@@ -50,12 +50,12 @@
     <Compile Include="Exceptions\DataTableStructureException.cs" />
     <Compile Include="Exceptions\SelectedDataTableExceptionMessages.cs" />
     <Compile Include="FileProcessor.cs" />
-    <Compile Include="FinancialTransactionsNetworkDataFactory.cs" />
-    <Compile Include="FinancialTransactionsNetworkData\EdgeMetrics.cs" />
-    <Compile Include="FinancialTransactionsNetworkData\FinancialNetworkDataWithCount.cs" />
-    <Compile Include="FinancialTransactionsNetworkData\FinancialNetworkDataWithNodesIconsAndCount.cs" />
-    <Compile Include="FinancialTransactionsNetworkData\FinancialNetworkDataWithNodesIconsInColorAndCount.cs" />
-    <Compile Include="FinancialTransactionsNetworkData\FinancialNetworkEdgesList.cs" />
+    <Compile Include="FinancialNetworkDataFactory.cs" />
+    <Compile Include="FinancialNetworkData\EdgeMetrics.cs" />
+    <Compile Include="FinancialNetworkData\FinancialNetworkDataWithCount.cs" />
+    <Compile Include="FinancialNetworkData\FinancialNetworkDataWithNodesIconsAndCount.cs" />
+    <Compile Include="FinancialNetworkData\FinancialNetworkDataWithNodesIconsInColorAndCount.cs" />
+    <Compile Include="FinancialNetworkData\FinancialNetworkEdgesList.cs" />
     <Compile Include="Helpers\ColorMapper.cs" />
     <Compile Include="Helpers\IconMapper.cs" />
     <Compile Include="Interfaces\INetworkData.cs" />
