Refactored MainRibbon. Extracted to generate all sample data in class SampleData.

--- a/ExcelAddIn/iExcelNetwork AddIn for Excel.csproj
+++ b/ExcelAddIn/iExcelNetwork AddIn for Excel.csproj
@@ -229,6 +229,7 @@
     <Compile Include="MainRibbon.Designer.cs">
       <DependentUpon>MainRibbon.cs</DependentUpon>
     </Compile>
+    <Compile Include="SampleData.cs" />
     <Compile Include="VisjsNetwork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
